Fix some whitespace and formatting issues

--- a/src/styles/5-pages/_project.scss
+++ b/src/styles/5-pages/_project.scss
@@ -1,6 +1,6 @@
 .project-header {
     &__time {
         display: block;
-        font-style: italic;
+        margin-top: .5rem;
     }
 }
